Etiket yazdır fonksiyonu ayrı bir fonksiyon olarak düzenlendi.

--- a/NOVA/Views/Home/Index.cshtml
+++ b/NOVA/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
         }
 
         body {
-            padding: 0 0 0 3rem !important;
+            padding: 0 0 0 50px;
             overflow: hidden;
         }
 
