--- a/NOVA/Views/Satis/FabrikaStok.cshtml
+++ b/NOVA/Views/Satis/FabrikaStok.cshtml
@@ -296,8 +296,8 @@
                        data-toolbar="#toolbar"
                        data-show-export="true"
                        data-export-data-type="all"
-                       data-export-types="['xlsx']"
-                       data-export-options='{"fileName": "Fabrika_Stok"}'
+                       data-export-types="['excel']"
+                       data-export-options='{"fileName": "FabrikaStok"}'
                        data-pagination="false"
                        data-search="true"
                        data-show-columns="true"
