--- a/NOVA/Views/Satis/Index.cshtml
+++ b/NOVA/Views/Satis/Index.cshtml
@@ -8,7 +8,7 @@
 <script src="~/assets/vendor/libs/popper/popper.js"></script>
 <style>
     body {
-        padding: 0 0 0 4rem !important;
+        padding: 0 0 0 4rem;
     }
 </style>
 <style>
@@ -92,9 +92,6 @@
             display: none;
         }
 
-        body {
-            padding: 0 0 0 2rem !important;
-        }
     }
 </style>
 
