--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -417,6 +417,20 @@
                         </div>
                     </div>
                 </a>
+                <a class="menu-item" href="/Uretim/UretimPlanlama" style="display: @ViewBag.DisplayUretimPlanlama;">
+                    <div class="module">
+                        <div class="information">
+                            <span class="fadable">Üretim Planlama</span>
+                        </div>
+                    </div>
+                </a>
+                <a class="menu-item" href="/Uretim/UretimKaynakPlanlama" style="display: @ViewBag.DisplayUretimKaynakPlanlama;">
+                    <div class="module">
+                        <div class="information">
+                            <span class="fadable">Üretim Kaynak Planlama</span>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
 
@@ -674,7 +688,7 @@
             localStorage.setItem('sidebar', !SidebarIsToggle);
         }
     }
-
+    var calendarInstance1=null;
     function Toggle(SidebarIsToggle) {
         if (IsTogglable) {
             IsTogglable = false;
@@ -703,9 +717,12 @@
                 setTimeout(() => {
                     IsTogglable = true;
                 }, 250);
+                if (calendarInstance1 != null) {
+                    calendarInstance1.turnOnFullScreen()
+                }
             }
             else {
-
+               
                 var SidebarCSS = {
                     "opacity": '1',
                     "height": '100svh',
@@ -740,7 +757,11 @@
 
                     IsTogglable = true;
                 }, 250);
+                if (calendarInstance1!=null) {
+                    calendarInstance1.turnOffFullScreen()
+                }
             }
+            
         }
     }
 
