--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -15,11 +15,12 @@
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-    
+
     <style>
         body {
             padding: 0 0 0 3rem !important;
         }
+
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
             -webkit-appearance: none;
@@ -69,7 +70,7 @@
             min-height: 95vh;
         }
 
-        body {
+        .layout-page {
             font-size: 12px;
         }
 
@@ -122,6 +123,9 @@
     </style>
 </head>
 <body style="overflow:hidden">
+    <div id="nova-overlay" style="position: absolute; background: #00000080; left: 0; right: 0; bottom: 0; top: 0; z-index: 9999999;display:flex;justify-content:center;align-items:center;">
+        <div class="heart"><img id="progress" src="~/images/novasaydam.png" width="400" /></div>
+    </div>
     <div class="container-fluid mt-3">
         <div class="centercontent" id="content" style="display:none">
             <div class="heart"><img id="progress" src="~/images/novasaydam.png" style="max-width:15vw" /></div>
@@ -664,14 +668,14 @@
                 <div class="col">
 
                     <div style="overflow:auto !important">
-                        
+
                         <div class="text-center mb-2" id="DLPivotTop"></div>
                         <div class="text-center" id="TPPivotTop" style="display:none"></div>
                         <div class="text-center" id="BKPivotTop" style="display:none"></div>
                         <div class="text-center" id="PBPivotTop" style="display:none"></div>
                         <div class="text-center" id="RFPivotTop" style="display:none"></div>
                     </div>
-                    
+
 
 
 
@@ -698,7 +702,7 @@
         </div>
     </div>
     @Html.Partial("IsEmriPartials/RehberPartial")
-<script>
+    <script>
 
         if ($(window).width() < 600) {
             $("#divPartial2").show();
@@ -1074,10 +1078,10 @@
         document.querySelector('.select2-search__field').focus();
     });
 
-    $(document).ready(function () {
-       
+        $(document).ready(function () {
+
         $('#pageName').html('<div class="dot"></div> İş Emri')
-        
+
         $(".js-select").select2(
             {
                 "language": {
@@ -1131,9 +1135,9 @@
 
 
                             for (let e = 0; e < fil.length; e++) {
-                                
+
                                     sum = sum + parseFloat(fil[e].GENISLIK);
-                                
+
 
                             }
                         var ek = 0;
@@ -1229,8 +1233,9 @@
             getPivot2();
             getPivot();
         }
-        $("#btnradio12").prop("checked", true).trigger("click");
-    })
+            $("#btnradio12").prop("checked", true).trigger("click");
+            HideProgress()
+        })
     var hamkod = null;
     function MachineChange(val, tableId) {
         if (val.value != "SEÇİNİZ") {
@@ -1937,7 +1942,7 @@
                                         var is = isemrilist.filter(x => x.includes(makine));
                                         sonisemri = is[is.length - 1].substring(0, 12) + (parseFloat(is[is.length - 1].substring(12, 15)) + 1).toString().padStart(3, '0');
                                     }
-                             
+
                                     if (serilist.includes(girdi2)) {
                                         //if (refstokolcusu == "SEÇİNİZ") {
                                         //    if (siralist.includes(sirano) && adet == 1) {
@@ -1945,10 +1950,10 @@
                                         //    } else {
                                         //        girdi2 = girdi2old.substring(0, 12) + (parseFloat(serilist[serilist.length - 1].substring(12, 15)) + 1).toString().padStart(3, '0');
                                         //    }
-                                            
+
                                         //}
                                         girdi2 = girdi2old.substring(0, 12) + (parseFloat(serilist[serilist.length - 1].substring(12, 15)) + 1).toString().padStart(3, '0');
-                                    } 
+                                    }
                                     if (refstokolcusu == "SEÇİNİZ") {
                                         refstokolcusu = "-"
                                         refadet = "-"
@@ -1970,7 +1975,7 @@
 
                                         serilist.push(girdi2);
                                         say++;
-                                        
+
                                     }
                                     if (!siralist.includes(sirano) && girdi2 != "-") {
 
@@ -1982,16 +1987,16 @@
                                         isemrilist.push(sonrefisemri);
                                     }
 
-                                   
+
                                 }
-                                
+
                                 DLListTop.push({ MAKINE: makine, MAKINEREF: makineref, MUSTERI: musteri, STOKADI: (refstokolcusu == "-" ? stokadi : refstokolcusu), KALINLIK: kalinlik, KAPLAMA: kaplama, KALITE: kalite, ADET: adet, AGIRLIK: parseFloat(refagirlik.replace(',', '.')), REF_ADET: (refadet == 0 || refadet == '-' ? adet : (refadet * adet)) });
                                 var fark = DLList.length;
                                 OldStokAdi = $("#stokadi").val();
                                 siralist = [];
                                 var listZ = [];
-                               
-                               
+
+
                                 if (localStorage.DLlist != null && localStorage.DLlist != "null") {
                                     var l = JSON.parse(localStorage.DLlist);
                                     for (let z = 0; z < l.length; z++) {
@@ -2056,13 +2061,13 @@
                                     var fil = takiplist.filter(x => x.GIRDI1 == girdi1[i].GIRDI1);
 
                                     for (let e = 0; e < fil.length; e++) {
-                                       
+
                                             sum = sum + parseFloat(fil[e].GENISLIK);
-                                        
+
 
                                     }
                                     var ek = 0;
-                                    
+
                                     for (let e = 0; e < fil.length; e++) {
                                         if (fil[e].MIKTAR_SABITLE == "E") {
                                             fil[e].HAMSARF = parseFloat(parseFloat(fil[e].GENISLIK) / sum) * (parseFloat(fil[e].TAMAGIRLIK)) * parseFloat(fil[e].ORAN);
@@ -2075,7 +2080,7 @@
                                             }
                                             fil[e].FIRE = fil[e].HAMSARF - (parseFloat(fil[e].AGIRLIK));
                                             fil[e].AGIRLIK = parseFloat(parseFloat(fil[e].AGIRLIK));
-                                        
+
                                         if (fil.length == 1) {
                                             fil[0].FIRE = fil[0].HAMSARF - (parseFloat(fil[0].AGIRLIK));
                                         }
@@ -2086,8 +2091,8 @@
                                             fil[e].AGIRLIK = parseFloat(parseFloat(fil[e].AGIRLIK));
                                         }
                                     }
-                                    } 
-                                    
+                                    }
+
 
                                     if (newtakip.length == 0) {
                                         newtakip = fil;
@@ -2308,7 +2313,7 @@
                 $("#tamamidiv").hide();
                 break;
         }
-       
+
     }
     function c(val) {
         if (val.value == "DL") {
@@ -2516,7 +2521,7 @@
 
     function netsisaktar() {
 
-        $("#content").show();
+        ShowProgress()
         document.body.style.cursor = 'wait';
         var Tip = $('input[name="uretim-tip"]:checked').val();
         switch (Tip) {
@@ -2530,7 +2535,7 @@
                     data: { isemri: lis, TamamiKullanilsin: TamamiAktarilsin },
     success: function () {
 
-        $("#content").hide();
+        HideProgress()
 
         $("#seri").val(null).trigger("input");
         mail();
@@ -2551,7 +2556,7 @@
     },
     error: function () {
         document.body.style.cursor = 'default';
-        $("#content").hide();
+        HideProgress()
         const Toast = Swal.mixin({
             toast: true,
             position: 'center',
@@ -2570,7 +2575,7 @@
         });
     }
 }).done(function () {
-                           $("#content").hide();
+                           HideProgress()
                            sil()
                            document.body.style.cursor = 'default';
 
@@ -2586,7 +2591,7 @@
     data: { isemri: lis },
     success: function () {
 
-        $("#content").hide();
+        HideProgress()
 
         $("#seri").val(null).trigger("input");
         mail();
@@ -2620,7 +2625,7 @@
     },
     error: function () {
         document.body.style.cursor = 'default';
-        $("#content").hide();
+        HideProgress()
         const Toast = Swal.mixin({
             toast: true,
             position: 'center',
@@ -2639,7 +2644,7 @@
         });
     }
 }).done(function () {
-                           $("#content").hide();
+                           HideProgress()
                            sil()
                            document.body.style.cursor = 'default';
 
@@ -2665,7 +2670,7 @@
                                     data: { isemri: lis, TamamiKullanilsin: TamamiAktarilsin },
     success: function () {
 
-        $("#content").hide();
+        HideProgress()
 
         $("#seri").val(null).trigger("input");
         mail();
@@ -2692,7 +2697,7 @@
     },
     error: function () {
         document.body.style.cursor = 'default';
-        $("#content").hide();
+        HideProgress()
         const Toast = Swal.mixin({
             toast: true,
             position: 'center',
@@ -2711,7 +2716,7 @@
         });
     }
 }).done(function () {
-                           $("#content").hide();
+                           HideProgress()
                            sil()
                            document.body.style.cursor = 'default';
 
@@ -3716,7 +3721,7 @@ $.ajax({
                 break;
             case 'TP':
                 result = Grupla(JSON.parse(localStorage.TPPivotToplamVeri));
-               
+
                 break;
             case 'BK':
                 result = Grupla(JSON.parse(localStorage.BKPivotToplamVeri));
@@ -3740,7 +3745,7 @@ $.ajax({
                 alert('Mail gönderildi!')
             }
         })
-    
+
     }
     function chcked() {
         var b = $('#tamami').is(':checked');
@@ -3752,8 +3757,17 @@ $.ajax({
             $('.selectmakina2').prop('disabled', true);
         }
     }
+    function ShowProgress() {
+        document.body.style.overflow = 'hidden';
+        document.activeElement.blur();
+        $('#nova-overlay').fadeIn('fast').css('display', 'flex');
+    }
+    function HideProgress() {
+        document.body.style.overflow = 'auto';
+        $('#nova-overlay').fadeOut('slow');
+    }
 //#endregion
-</script>
+    </script>
 </body>
 
 
