--- a/NOVA/Views/Satis/ZiyaretPlanlari.cshtml
+++ b/NOVA/Views/Satis/ZiyaretPlanlari.cshtml
@@ -9,7 +9,7 @@
     }
 
     body {
-        padding: 0 0 0 4rem !important;
+        padding: 0 0 0 4rem;
     }
 
     @@media screen and (max-width: 600px) {
