--- a/NOVA/Views/Shared/_Layout _yonetim_stok.cshtml
+++ b/NOVA/Views/Shared/_Layout _yonetim_stok.cshtml
@@ -139,9 +139,7 @@
     <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/tableExport.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/libs/jsPDF/jspdf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/libs/jsPDF-AutoTable/jspdf.plugin.autotable.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.22.1/dist/extensions/export/bootstrap-table-export.min.js"></script>
-    <script src="~/Scripts/xlsx.core.min.js"></script>
-
+    <script src="~/Content/bootstrap-table-master/src/extensions/export/bootstrap-table-export.js"></script>
 
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
