--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -1901,7 +1901,8 @@
         var max2 = 0;
         var bant = false;
         var listIsemri = null;
-        var isemri="";
+        var isemri = "";
+        var count = 0;
          function stokadichange(value) {
             max = parseInt(value.dataset.top) - parseInt(value.dataset.kul)
             var stokkodu = value.dataset.stokkodu;
@@ -1937,6 +1938,8 @@
 }).then((result) => {
     ShowProgress();
     if (result.isConfirmed) {
+        count++;
+        alert(count)
         if (m1 != null) {
             var stokkodu = value.dataset.stokkodu;
             var hat = value.dataset.hat;
@@ -2718,7 +2721,6 @@
                         },
                         success: function (data) {
 
-
                                 HideProgress();
                                 $("#SiparisModal").modal('hide');
                             if (data.substring(0, 4) == "Hata") {
@@ -2814,7 +2816,6 @@
                 var yazici = $("#yazici").val();
                 if (hat.substring(0, 2) != "TP" && hat.substring(0, 2) != "BK" && hat.substring(0, 2) != "MH") {
                     if (hat.substring(0, 2) != "PB" && hat.substring(0, 2) != "RF") {
-
                         $.ajax({
                             url: '@Url.Action("UretimSonuKaydi", "Uretim")',
                             type: 'POST',
@@ -2830,29 +2831,44 @@
                                 )
                                  document.getElementById(btnid).onclick();
                             },
-                            success: function (data) {
+                            success: function (data)
+                            {
                                 HideProgress();
+
                                 $("#SiparisModal").modal('hide');
-                                if (data.substring(0, 4) == "Hata") {
-                                    playHata1()
-                                    Swal.fire(
-                                        'Başarısız!',
-                                        data,
-                                        'error'
-                                    )
-                                } else {
-                                    playOnay()
-                                    Swal.fire(
-                                        'Başarılı!',
-                                        'Kayıt başarılı',
-                                        'success'
-                                    )
+
+                                if (data.substring(0, 4) == "Hata")
+                                {
+                                    playHata1();
+
+                                    Swal.fire('Başarısız!', data, 'error');
                                 }
+                                else
+                                {
+                                    playOnay();
+
+                                    Swal.fire('Başarılı!', 'Kayıt başarılı', 'success');
+
+                                    $.ajax({
+                                        url: '@Url.Action("PrintPDF", "Uretim")',
+                                        type: 'POST',
+                                        data: {
+                                            "BarkodNoList": JSON.parse(data),
+                                            "Yazici": yazici,
+                                            "Yazdir": etiket,
+                                            "Onizle": etiketOnizleme
+                                        },
+                                        error: (e) => { console.log(JSON.stringify(e)); },
+                                        success: (response) => {
+                                            if (response.trim().length > 0 && etiketOnizleme && etiket) {
+                                                EtiketOnizle(response);
+                                            }
+                                        }
+                                    });
+
+                                }
+
                                 document.getElementById(btnid).onclick();
-                                if (data.trim().length > 0 && etiketOnizleme && etiket) {
-                                    EtiketOnizle(data);
-                                }
-                                console.log(data);
                             }
                         })
                     } else {
@@ -4154,9 +4170,13 @@
             error: (e) => {console.log(`Üretilmiş Barkod Yazdır: Hata oluştu.`); },
             success: (Response) =>
             {
+                if (!DirektYazdir) {
                     UretilmisEtiketOnizle(Response, SecilenBarkodlar[0]);
-
+                }
             }
+        }).then(() => {
+            document.body.style.pointerEvents = 'auto';
+            HideProgress();
         });
 
         SecilenBarkodlar = [];
@@ -4170,30 +4190,36 @@
 
     function UretilmisEtiketOnizle(data, BarkodNo)
     {
-        if (/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|ipad|iris|kindle|Android|Silk|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(navigator.userAgent)
-            || /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(navigator.userAgent.substr(0, 4)))
-        {
-            const linkSource = `data:application/pdf;base64,${data}`;
-            const downloadLink = document.createElement("a");
-            const fileName = `${BarkodNo}-${Math.floor(Date.now() / 1000)}.pdf`;
-            downloadLink.href = linkSource;
-            downloadLink.download = fileName;
-            downloadLink.click();
-            window.open(`content:///storage/emulated/0/Download/${fileName}`, '_blank');
-            /*w = window.open('http://192.168.2.13:85/DesignOutput/Uretim/UretimSonuKaydi/'+data); w.print();*/
+        if (isBase64(data)) {
+            if (/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|ipad|iris|kindle|Android|Silk|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(navigator.userAgent)
+                || /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(navigator.userAgent.substr(0, 4))) {
+                const linkSource = `data:application/pdf;base64,${data}`;
+                const downloadLink = document.createElement("a");
+                const fileName = `${BarkodNo}-${Math.floor(Date.now() / 1000)}.pdf`;
+                downloadLink.href = linkSource;
+                downloadLink.download = fileName;
+                downloadLink.click();
+                window.open(`content:///storage/emulated/0/Download/${fileName}`, '_blank');
+                /*w = window.open('http://192.168.2.13:85/DesignOutput/Uretim/UretimSonuKaydi/'+data); w.print();*/
 
+            }
+            else {
+                printJS({
+                    printable: data,
+                    type: 'pdf',
+                    base64: true
+                });
+            }
         }
-        else
-        {
-            printJS({
-                printable: data,
-                type: 'pdf',
-                base64: true
-            });
-        }
+    }
 
-        document.body.style.pointerEvents = 'auto';
-        HideProgress();
+    function isBase64(str) {
+        if (str === '' || str.trim() === '') { return false; }
+        try {
+            return btoa(atob(str)) == str;
+        } catch (err) {
+            return false;
+        }
     }
 
     function YazdirSwitch() {
