--- a/NOVA/Views/Uretim/UretimPlanlama.cshtml
+++ b/NOVA/Views/Uretim/UretimPlanlama.cshtml
@@ -1,8 +1,188 @@
-﻿
-@{
-    ViewBag.Title = "UretimPlanlama";
+﻿@{
     Layout = "~/Views/Shared/_Layout_common.cshtml";
 }
 
-<h2>UretimPlanlama</h2>
+<head>
+    <meta charset='utf-8' />
+    <style>
+
+        html, body {
+            margin: 0;
+            padding: 0 1rem 0 2.5rem !important;
+            font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+            font-size: 14px;
+        }
+        #calendar {
+            width: 50vw 
+        }
+        .fc-toolbar-chunk{
+            margin-top:5px;
+            margin-bottom:5px;
+        }
+        @@media screen and (max-width: 600px) {
+            #calendar {
+                width: 100%;
+                min-height: 70vh;
+                margin-bottom:5px;
+            }
+        }
+    </style>
+
+    <script src="~/fullcalendar-scheduler-6.0.1/dist/index.global.js"></script>
+    <script>
+        var calendar = null
+        var drag = null;
+        var drag1 = null;
+        var gerceklesentarih = null;
+
+        function CreateCalendar() {
+            var Calendar = FullCalendar.Calendar;
+            var Draggable = FullCalendar.Draggable;
+
+            var containerEl = document.getElementById('mydraggable');
+            var calendarEl = document.getElementById('calendar');
+
+            // initialize the external events
+            // -----------------------------------------------------------------
+
+            drag = new Draggable(containerEl, {
+                itemSelector: '.fc-event',
+                eventData: function (eventEl) {
+                    var j_selector = jQuery(eventEl);
+                    return {
+                        id: j_selector.data('id'),
+                        title: eventEl.innerText
+                    };
+                }
+            });
+
+
+            // initialize the calendar
+            // -----------------------------------------------------------------
+
+            calendar = new Calendar(calendarEl, {
+                headerToolbar: {
+                    left: 'prev,next today',
+                    center: 'title',
+                    right: 'dayGridMonth,timeGridWeek,timeGridDay,listMonth'
+                },
+                locale: "tr",
+                editable: true,
+                droppable: true, // this allows things to be dropped onto the calendar
+                eventTimeFormat: { // like '14:30:00'
+                    hour: '2-digit',
+                    minute: '2-digit',
+                    meridiem: false
+                },
+                eventReceive: function (info) {
+
+
+
+
+
+                },
+                eventDrop: function (date) {
+
+
+                },
+                eventClick: function (info) {
+
+
+
+
+
+
+
+
+                    //info.event.remove();
+
+
+
+
+                },
+                eventResize: function (info) {
+                    info.revert();
+                },
+                dateClick: function (info) {
+                    calendar.changeView('timeGridDay', info.dateStr);
+                },
+                eventDidMount: function (info) {
+
+
+                },
+                buttonText: {
+                    today: 'Bugün',
+                    month: 'Ay',
+                    week: 'Hafta',
+                    day: 'Gün',
+                    list: 'Liste',
+                    listMonth: 'Aylık Liste',
+                    listYear: 'Yıllık Liste',
+                    listWeek: 'Haftalık Liste',
+                    listDay: 'Günlük Liste'
+                },
+            })
+
+
+
+            calendar.render();
+
+
+        };
+        $(document).ready(() => {
+            var d;
+            $.getJSON('http://192.168.2.13:83/api/uretim/tumstoklar', function (data) {
+                d = data;
+            }).done(function () {
+                CreateCalendar();
+                for (let i = 0; i < d.length; i++) {
+                    $('#musteri2').append("<div class='fc-event fc-h-event fc-daygrid-event fc-daygrid-block-event m1' data-id='1' style='max-width:350px'><div class='fc-event-main'>" + d[i].STOK_ADI+"</div></div>")
+                }
+                
+            })
+            
+            $('.fc-toolbar.fc-header-toolbar').addClass('row col-lg-12');
+        });
+
+
+    </script>
+
+</head>
+
+
+<div class="row">
+
+    <div class="col d-flex">
+        <div id='calendar'></div>
+    </div>
+    <div class="col d-flex">
+        <div id='mydraggable' style="width:350px">
+
+            <div class="accordion mt-2">
+
+                <div class="accordion-item active mt-1 mb-2" style="background-color:transparent">
+                    <h2 class="accordion-header " id="headingtwo1">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo1" aria-expanded="false" aria-controls="flush-collapseTwo1">
+                            PLANLANACAKLAR
+                        </button>
+                    </h2>
+                    <div id="flush-collapseTwo1" class="accordion-collapse collapse" aria-labelledby="headingtwo1" data-bs-parent="#mydraggable">
+                        <div id="musteri2" style="max-height:450px;overflow-y:auto">
+                            <input class="form-control position-sticky sticky-top" type="text" id="Search1" onkeyup="myFunction1()" placeholder="Ara..">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+    </div>
+</div>
+    
+    
+
+
+
+
 
