--- a/NOVA/Views/Satis/FabrikaStok.cshtml
+++ b/NOVA/Views/Satis/FabrikaStok.cshtml
@@ -337,6 +337,7 @@
                             <th data-visible="false" data-field="IRSALIYENO" data-sortable="true" data-halign="center">İRSALİYE NO</th>
                             <th data-visible="false" data-field="ISEMRINO" data-sortable="true" data-halign="center">İŞ EMRİ NO</th>
                             <th data-visible="false" data-field="URETILECEKMALZEMEADI" data-sortable="true" data-halign="center">ÜRETİLECEK MALZEME ADI</th>
+                            <th data-visible="false" data-field="BOBINNO" data-sortable="true" data-halign="center">BOBİN NO</th>
                             <th data-visible="false" data-field="ISEMRIKOD" data-sortable="true" data-halign="center">ÜRETİLECEK MAKİNE</th>
                         </tr>
                     </thead>
