--- a/NOVA/Views/Sevkiyat/MusteriSiparisRaporuPartials/SevkFormu_Barkod_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/MusteriSiparisRaporuPartials/SevkFormu_Barkod_Modal.cshtml
@@ -171,7 +171,7 @@
                         if (data[0].MIKTAR > 0 || data[0].MIKTAR2 > 0) {
                             StokAdiSec(data[0].STOK_KODU);
 
-                            $('#MIKTAR').val(data[0].MIKTAR.toFixed(2) <= Siparis[0].BAKIYE_MIKTARI.toFixed(2) ? (data[0].MIKTAR).toFixed(2) : (Siparis[0].BAKIYE_MIKTARI).toFixed(2));
+                            $('#MIKTAR').val(parseFloat(data[0].MIKTAR.toLocaleString(undefined, { maximumFractionDigits: 2 })) <= parseFloat(Siparis[0].BAKIYE_MIKTARI.toLocaleString(undefined, { maximumFractionDigits: 2 })) ? (data[0].MIKTAR).toFixed(2) : (Siparis[0].BAKIYE_MIKTARI).toFixed(2));
                             $('#MIKTAR2').val(data[0].MIKTAR2.toFixed(2));
                             $('#SERI_NO').val(BarkodNo);
                             $('#ACIK1').val(parseFloat(data[0].ACIK1.replace(",", ".")).toFixed(2).toString().replace(".", ","));
@@ -180,7 +180,7 @@
                             $('#SERI_NO_3').val(data[0].SERI_NO_3);
                             $('#SERI_NO_4').val(data[0].SERI_NO_4);
 
-                            $('#MIKTAR').prop('max', data[0].MIKTAR.toFixed(2) <= Siparis[0].BAKIYE_MIKTARI.toFixed(2) ? (data[0].MIKTAR).toFixed(2) : (Siparis[0].BAKIYE_MIKTARI).toFixed(2));
+                            $('#MIKTAR').prop('max', parseFloat(data[0].MIKTAR.toLocaleString(undefined, { maximumFractionDigits: 2 })) <= parseFloat(Siparis[0].BAKIYE_MIKTARI.toLocaleString(undefined, { maximumFractionDigits: 2 })) ? (data[0].MIKTAR).toFixed(2) : (Siparis[0].BAKIYE_MIKTARI).toFixed(2));
                             $('#MIKTAR2').prop('max', data[0].MIKTAR2.toFixed(2));
 
                             SeciliBarkodVar = true;
