--- a/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
@@ -315,6 +315,7 @@
         })
 
     }
+    var detaysiz;
     $(document).ready(function () {
         $('#pageName').html('<div class="dot"></div> Müşteri Sipariş Raporu')
         $.getJSON("http://192.168.2.13:83/api/detaylisip", function (data) {
@@ -322,6 +323,7 @@
         }).done(function () {
 
             $.getJSON("http://192.168.2.13:83/api/detaysizsip", function (data) {
+                detaysiz = data;
                 $('#table').bootstrapTable("destroy");
                 $('#table').bootstrapTable({ data: data })
             }).done(function () {
