--- a/NOVA/Views/Satis/Index.cshtml
+++ b/NOVA/Views/Satis/Index.cshtml
@@ -253,6 +253,8 @@
 
     $("#divPartial").show();
 
+    document.getElementById("satis1").className = "nav__link active";
+    document.getElementById("stok1").className = "nav__dropdown-item active";
 
 
     var type = 'fa'
@@ -479,7 +481,7 @@
 
                         document.getElementsByClassName("search-input")[0].oninput = function () {
 
-                            document.getElementsByClassName("search-input")[0].value = document.getElementsByClassName("search-input")[0].value.toLocaleUpperCase('TR');
+                            document.getElementsByClassName("search-input")[0].value = document.getElementsByClassName("search-input")[0].value.toUpperCase();
                         }
                     })
                     $("#table2").bootstrapTable('destroy').bootstrapTable({
