--- a/NOVA/Views/Sevkiyat/MusteriSiparisRaporuPartials/SevkFormu_Seri_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/MusteriSiparisRaporuPartials/SevkFormu_Seri_Modal.cshtml
@@ -77,7 +77,7 @@
 
         if ($('#STOK_SECIM').val() !== '')
         {
-            var ProcUrl = "http://192.168.2.13:83/api/seri/rehber/" + $('#STOK_SECIM').val();
+            var ProcUrl = "http://192.168.2.13:83/api/seri/rehber/" + $('#STOK_SECIM').val() + "/" + CikisDepo;
 
             var BarkodNoListesi = [];
 
