--- a/NOVA/Views/Shared/_Layout_common.cshtml
+++ b/NOVA/Views/Shared/_Layout_common.cshtml
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html style="overflow:hidden">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
