--- a/NOVA/Views/IsEmri/IsEmriPartials/RehberPartial.cshtml
+++ b/NOVA/Views/IsEmri/IsEmriPartials/RehberPartial.cshtml
@@ -12,7 +12,7 @@
                    data-toggle="table"
                    data-search="false"
                    data-export-types="['excel']"
-                   data-pagination="false"
+                   data-pagination="true"
                    data-locale="tr-TR"
                    data-loading-template="loadingTemplate"
                    data-filter-control="true"
@@ -20,7 +20,11 @@
                    data-url="http://192.168.2.13:83/api/seri/serirehber">
                 <thead>
                     <tr>
+
+                        <th data-field="" data-halign="center" data-align="center" data-formatter="formatterIslem">İŞLEM</th>
                         <th data-field="SERI_NO" data-halign="center" data-align="center" data-formatter="formatterUrun" data-filter-control="input">Ürün Kodları</th>
+
+                        <th data-field="ACIKLAMA_5" data-halign="center" data-align="center" data-filter-control="input">Eski No</th>
                         <th data-field="STOK_KODU" data-halign="center" data-align="center" data-filter-control="input">STOK KODU</th>
                         <th data-field="STOK_ADI" data-halign="center" data-align="center" data-filter-control="input">STOK ADI</th>
                         <th data-field="MENSEI" data-halign="center" data-align="center" data-filter-control="input">MENŞEİ</th>
@@ -30,7 +34,6 @@
                         <th data-field="SERI_NO_3" data-halign="center" data-align="center" data-filter-control="input">Kalite</th>
                         <th data-halign="center" data-align="center" data-formatter="metFormatter">METRAJ</th>
                         <th data-field="MIKTAR" data-halign="center" data-align="center" data-formatter="formatterMiktar">AĞIRLIK</th>
-                        <th data-field="" data-halign="center" data-align="center" data-formatter="formatterIslem">İŞLEM</th>
                     </tr>
                 </thead>
             </table>
