--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporu_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporu_Modal.cshtml
@@ -98,14 +98,14 @@
                                         <div class="row gy-3">
                                             <div class="col-sm">
                                                 <div class="form-label-group outline m-0">
-                                                    <input type="number" id="ACIK1" class="form-control" step="0.01" autocomplete="off" value="" />
-                                                    <span><label for="ACIK1">KALINLIK</label></span>
+                                                    <input type="number" id="ACIK2" class="form-control" step="0.01" autocomplete="off" value="" />
+                                                    <span><label for="ACIK2">KALINLIK</label></span>
                                                 </div>
                                             </div>
                                             <div class="col-sm">
                                                 <div class="form-label-group outline m-0">
-                                                    <input type="number" id="ACIK2" class="form-control" step="0.1" autocomplete="off" value="" />
-                                                    <span><label for="ACIK2">GENİŞLİK</label></span>
+                                                    <input type="number" id="ACIK1" class="form-control" step="0.1" autocomplete="off" value="" />
+                                                    <span><label for="ACIK1">GENİŞLİK</label></span>
                                                 </div>
                                             </div>
                                             <div class="col-sm">
@@ -204,8 +204,8 @@
                                             <th data-field="OLCU_BR1" data-formatter="TempTableEmptyFormatter" data-sortable="true" data-halign="center" data-align="center">BİRİM 1</th>
                                             <th data-field="MIKTAR2" data-formatter="MiktarFormatla" data-sortable="true" data-halign="center" data-align="center">MİKTAR 2</th>
                                             <th data-field="OLCU_BR2" data-formatter="TempTableEmptyFormatter" data-sortable="true" data-halign="center" data-align="center">BİRİM 2</th>
-                                            <th data-field="ACIK1" data-formatter="KalinlikFormatter" data-sortable="true" data-halign="center" data-align="center">KALINLIK</th>
-                                            <th data-field="ACIK2" data-formatter="GenislikFormatter" data-sortable="true" data-halign="center" data-align="center">GENİŞLİK</th>
+                                            <th data-field="ACIK2" data-formatter="GenislikFormatter" data-sortable="true" data-halign="center" data-align="center">KALINLIK</th>
+                                            <th data-field="ACIK1" data-formatter="KalinlikFormatter" data-sortable="true" data-halign="center" data-align="center">GENİŞLİK</th>
                                             <th data-field="ACIK3" data-formatter="TempTableEmptyFormatter" data-sortable="true" data-halign="center" data-align="center">ÜRÜN NO</th>
                                             <th data-field="SERI_NO_3" data-formatter="TempTableEmptyFormatter" data-sortable="true" data-halign="center" data-align="center">KALİTE</th>
                                             <th data-field="SERI_NO_4" data-formatter="TempTableEmptyFormatter" data-sortable="true" data-halign="center" data-align="center">KAPLAMA KALINLIĞI</th>
