--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -2232,6 +2232,22 @@
                     $("#ikincimik2").attr('onkeyup', 'keychangeikinci()');
                     $("#hurdamik").attr('onkeyup', '');
                 }
+                else if (hat.substring(0,2) == 'RF') {
+                    $("#miktar11").prop("disabled", false);
+                    $("#miktar22").prop("disabled", true);
+                    $("#kontrolcol").show();
+                    $("#kontrol").prop('checked', false);
+                    $("#kontrol").prop('disabled', false);
+                    $('#ikinciDiv').hide();
+                    $("#hurdamik").show();
+                    $("#ikincimik1").show();
+                    $("#ikincimik2").show();
+                    $("#BirimMik").show();
+                    $("#BirimMik2").show();
+                    $("#ikincimik2").attr('onkeyup', 'keychangeikinci()');
+                    $("#hurdamik").attr('onkeyup', '');
+                    $("#hurdaMHdiv").hide();
+                }
                 else {
                     $("#miktar11").prop("disabled", false);
                     $("#miktar22").prop("disabled", true);
